--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.pathmatch.matching-strategy = ant_path_matcher
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/schedule_new_bd
 spring.datasource.username=postgres
-spring.datasource.password=kirill2005
+spring.datasource.password=**********
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
