обавлен checkstyle и swagger для 4лр

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,8 @@ spring.mvc.pathmatch.matching-strategy = ant_path_matcher
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/schedule_new_bd
 spring.datasource.username=postgres
-spring.datasource.password=**********
+spring.datasource.password=kirill2005
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
