--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 server.port=8080
-spring.mvc.pathmatch.matching-strategy = ant_path_matcher
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/schedule_new_bd
+spring.datasource.url=jdbc:postgresql://shinkansen.proxy.rlwy.net:39692/railway?sslmode=require
 spring.datasource.username=postgres
-spring.datasource.password=kirill2005
+spring.datasource.password=tFZThRAqMuSlwpQGGMvrStrxjyShwQyt
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
