--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.datasource.url=jdbc:postgresql://shinkansen.proxy.rlwy.net:39692/railway?sslmode=require
 spring.datasource.username=postgres
-spring.datasource.password=tFZThRAqMuSlwpQGGMvrStrxjyShwQyt
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
